// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Render 1`] = `
<div
  className="profile-menu"
>
  <div
    className="profile-menu-items"
  >
    <span
      className="d-flex d-lg-none selected-item profile-menu-item"
    >
      <div
        className="custom-dropdown float-left"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            Posts
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      className="d-none d-lg-flex align-items-center"
    >
      <a
        className="profile-menu-item"
        href="/@username/blog"
        onClick={[Function]}
      >
        Blog
      </a>
      <a
        className="profile-menu-item selected-item"
        href="/@username/posts"
        onClick={[Function]}
      >
        Posts
      </a>
      <a
        className="profile-menu-item"
        href="/@username/comments"
        onClick={[Function]}
      >
        Comments
      </a>
      <a
        className="profile-menu-item"
        href="/@username/replies"
        onClick={[Function]}
      >
        Replies
      </a>
    </div>
    <a
      className="profile-menu-item"
      href="/@username/communities"
      onClick={[Function]}
    >
      Communities
    </a>
    <a
      className="profile-menu-item"
      href="/@username/wallet"
      onClick={[Function]}
    >
      Wallet
    </a>
  </div>
  <div
    className="page-tools"
  >
    <span
      className="list-style-toggle"
      onClick={[Function]}
      title="Toggle list style"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`(2) With active user 1`] = `
<div
  className="profile-menu"
>
  <div
    className="profile-menu-items"
  >
    <span
      className="d-flex d-lg-none selected-item profile-menu-item"
    >
      <div
        className="custom-dropdown float-left"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="dropdown-btn"
        >
          <div
            className="label"
          >
            Posts
          </div>
          <div
            className="menu-down"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
    <div
      className="d-none d-lg-flex align-items-center"
    >
      <a
        className="profile-menu-item"
        href="/@username/blog"
        onClick={[Function]}
      >
        Blog
      </a>
      <a
        className="profile-menu-item selected-item"
        href="/@username/posts"
        onClick={[Function]}
      >
        Posts
      </a>
      <a
        className="profile-menu-item"
        href="/@username/comments"
        onClick={[Function]}
      >
        Comments
      </a>
      <a
        className="profile-menu-item"
        href="/@username/replies"
        onClick={[Function]}
      >
        Replies
      </a>
    </div>
    <a
      className="profile-menu-item"
      href="/@username/communities"
      onClick={[Function]}
    >
      Communities
    </a>
    <a
      className="profile-menu-item"
      href="/@username/wallet"
      onClick={[Function]}
    >
      Wallet
    </a>
    <a
      className="profile-menu-item"
      href="/@username/settings"
      onClick={[Function]}
    >
      Settings
    </a>
  </div>
  <div
    className="page-tools"
  >
    <span
      className="list-style-toggle"
      onClick={[Function]}
      title="Toggle list style"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M16,5V11H21V5M10,11H15V5H10M16,18H21V12H16M10,18H15V12H10M4,18H9V12H4M4,11H9V5H4V11Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;
